2012-12-21 Simon Large
	* configure.ac: Correct the sense of the --disable-libusb_1_0
      switch. If PKG_CHECK_MODULES is not defined, assume libusb 1.0
      is available. Bug 3597941.

2012-12-20 Simon Large
	* src/atmel.c: Test a pointer for NULL before using it.
	  One instance was suggested in bug 3464910 and several
	  more were found in the same file.

2012-12-20 Simon Large
	* configure.ac: Apply patch supplied by Johannes Carlsson
	  to fix bug 3521662.

2012-12-20 Simon Large
	* src/commands.c: Use explicit casts for size_t values in
	  printf to avoid a compiler warning. Bug 3597609.

2012-12-20 Simon Large
	* src/atmel.c: Fix the atmel_reset function as described
	  by bug 3597607.

2011-09-22 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/dfu.c: Apply fix suggested by bug 340959.  Increase
	  the timeout to support the automotive AVR32 chips.

2011-01-16 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* fedora/dfu-programmer.spec.in,
	  fedora/10-dfu-programmer.fdi, configure.ac, NEWS,
	  AUTHORS, src/arguments.c, src/arguments.h,
	  docs/dfu-programmer.1: Updated to the new 0.5.3 release.

2011-01-16 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, src/arguments.h,
	  fedora/10-dfu-programmer.fdi,
	  doc/dfu-programmer.1: Added support for at32uc3c chips.

2011-01-16 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/commands.c: Apply fix suggested by bug 3017901.  Fix
	  an off by 1 error for the bootloader size.

2011-01-16 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/intel_hex.c: Apply fix suggested by bug 3016469.  Fix
	  a sign extension problem during reading in the data to
	  flash.

2010-05-02 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* AUTHORS, src/commands.c: Removed confusing & useless code
	  that Darren Gibbs found.

2010-04-08 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* AUTHORS, src/arguments.c, src/arguments.h
	  doc/dfu-programmer.1: Added the patch Mitko sent