@@ -30,7 +30,8 @@ These chip names are used as the command line "target" parameter.
 at89c51snd1c, at89c51snd2c, at89c5130, at89c5131, and at89c5132.
 .IP "AVR based controllers:"
 at90usb1287, at90usb1286, at90usb647, at90usb646, at90usb162,
-at90usb82, atmega32u6, atmega32u2, atmega32u4, atmega8u2 and atmega16u4.
+at90usb82, atmega32u6, atmega32u4, atmega32u2, atmega16u4,
+atmega16u2 and atmega8u2.
 .IP "AVR32 based controllers:"
 at32uc3a0128, at32uc3a1128, at32uc3a0256, at32uc3a1256,
 at32uc3a0512, at32uc3a1512, at32uc3a0512es, at32uc3a1512es,
