@@ -55,6 +55,7 @@ enum targets_enum { tar_at89c51snd1c,
                     tar_atmega32u4,
                     tar_atmega32u2,
                     tar_atmega16u4,
+                    tar_atmega16u2,
                     tar_atmega8u2,
                     tar_at32uc3b064,
                     tar_at32uc3b164,
